Added footer + navbar + CTA

--- a/khaial-website/public/locales/ar/common.json
+++ b/khaial-website/public/locales/ar/common.json
@@ -8,6 +8,13 @@
     "privacy": "سياسة الخصوصية",
     "terms": "الشروط"
   },
+  "cta": {
+    "pill": "الميزات",
+    "title_primary": "طريقتنا بسيطة",
+    "title_secondary": "وواضحة في كل خطوة.",
+    "subtitle": "نستثمر قوة الذكاء الاصطناعي لإحداث ثورة في الصناعات وتحسين التجارب البشرية.",
+    "button": "احجز موعدًا"
+  },
   "social": {
     "twitter": "تويتر (إكس)",
     "instagram": "إنستغرام",
