--- a/khaial-website/public/locales/en/common.json
+++ b/khaial-website/public/locales/en/common.json
@@ -8,6 +8,13 @@
     "privacy": "Privacy Policy",
     "terms": "Terms"
   },
+  "cta": {
+    "pill": "Features",
+    "title_primary": "Our Method is Simple and",
+    "title_secondary": "Transparent at Every Step.",
+    "subtitle": "Harnessing the power of artificial intelligence to revolutionize industries and enhance human experiences.",
+    "button": "Book an Appointment"
+  },
   "social": {
     "twitter": "Twitter (X)",
     "instagram": "Instagram",
