Finished home section basic sections

--- a/khaial-website/public/locales/ar/common.json
+++ b/khaial-website/public/locales/ar/common.json
@@ -8,6 +8,16 @@
     "privacy": "سياسة الخصوصية",
     "terms": "الشروط"
   },
+  "hero": {
+    "year_badge": "2025",
+    "studio_label": "استوديو ذكاء اصطناعي من الجيل التالي",
+    "title_line1": "أنظمة ذكاء اصطناعي",
+    "title_line2": "تفعل كل شيء من أجلك.",
+    "title_line3": "",
+    "subtitle": "ندير المبيعات والمحتوى والدعم والعمليات لتكبر أسرع بـ 10 مرات من منافسيك",
+    "cta_primary": "تواصل معنا",
+    "cta_secondary": "ما هو خَيَال؟"
+  },
   "cta": {
     "pill": "الميزات",
     "title_primary": "طريقتنا بسيطة",
@@ -29,6 +39,93 @@
     "email_input_label": "البريد الإلكتروني",
     "subscribe_form": "نموذج الاشتراك في النشرة",
     "legal_nav": "روابط قانونية"
+  },
+  "testimonials": {
+    "section_aria": "آراء العملاء",
+    "pill": "توصية",
+    "pill_label": "",
+    "title_line1": "ماذا يقول عملاؤنا",
+    "title_line2": "عن تميّز خَيَال",
+    "subtitle": "آراء حقيقية من عملائنا السعداء وكيف ساعدناهم على تحقيق أهدافهم وإحداث أثر دائم.",
+    "cta": "احجز موعدًا",
+    "cta_aria": "احجز موعدًا",
+    "quotes": [
+      "لم يقدّموا موقعًا مميزًا فحسب، بل قدّموا أيضًا توجيهًا استراتيجيًا انعكس إيجابًا على مؤشراتنا.",
+      "فهم الفريق متطلباتنا المعقّدة وقدّم حلاً قابلًا للتوسّع وسهل الاستخدام.",
+      "حلولهم المبتكرة ساعدت على تبسيط عملياتنا، وكانت النتائج فوق التوقّعات."
+    ]
+  },
+  "comparison": {
+    "pill": "مقارنة",
+    "title_primary": "قبل خَيَال مقابل بعده",
+    "title_secondary": "اشعر بالفرق",
+    "before": [
+      "أكثر من 6 ساعات مهدرة يوميًا",
+      "فقدان المبيعات يوميًا",
+      "تعقيد في إنشاء المحتوى",
+      "المنافسون يعملون بسرعة تفوقك بعشر مرات",
+      "شكاوى العملاء يوميًا"
+    ],
+    "after": [
+      "سير عمل مدعوم بالذكاء الاصطناعي",
+      "جودة عالية مع جهد قليل",
+      "أداء محسّن",
+      "تقنية قابلة للتطوّر",
+      "مرونة لا مثيل لها"
+    ]
+  },
+  "services": {
+    "pill": "الخدمات",
+    "title_line1": "خدمات مدعومة بالذكاء الاصطناعي",
+    "title_line2": "للأعمال الطموحة",
+    "subtitle": "حلول ذكاء اصطناعي متقدمة لتحويل الأعمال، وزيادة الكفاءة، ودفع الابتكار.",
+    "cta": "احجز مكالمة لمدة 15 دقيقة",
+    "cards": [
+      {
+        "title": "تطوير مدعوم بالذكاء الاصطناعي",
+        "subtitle": "مواقع ذكية",
+        "desc": "نبني مواقع تتكيّف مع المستخدمين والأتمتة اعتمادًا على الذكاء الاصطناعي."
+      },
+      {
+        "title": "شات بوت واتساب بالذكاء الاصطناعي",
+        "subtitle": "دعم عملاء 24/7",
+        "desc": "شات بوت فوري على واتساب والموقع يستجيب تلقائيًا."
+      },
+      {
+        "title": "ذكاء إبداعي",
+        "subtitle": "يجعل المحتوى حقيقيًا جدًا.",
+        "desc": "استفد من الذكاء الاصطناعي لإنشاء محتوى دون تقنيات مكلفة."
+      }
+    ],
+    "chips": [
+      "توليد المحتوى بالذكاء الاصطناعي",
+      "تحسين تجربة وواجهة المستخدم",
+      "تحليل البيانات",
+      "التحليلات",
+      "التخصيص",
+      "تكامل واتساب",
+      "توليد العملاء المحتملين"
+    ]
+  },
+  "about": {
+    "aria": "من نحن",
+    "pill": "من نحن",
+    "pill_label": "",
+    "start_index": 22,
+    "text": "العمليات اليدوية تقتل إمكانيات النمو لديك\n وتستنزف فريقك. نصمم أنظمة ذكاء اصطناعي مخصصة\n لتحويل عملك إلى آلة توليد أرباح\n تعمل من تلقاء نفسها."
+  },
+  "faqSection": {
+    "aria": "الأسئلة الشائعة",
+    "pill": "الأسئلة",
+    "title_line1": "الأسئلة",
+    "title_line2": "الشائعة",
+    "subtitle": "هل لديك أسئلة؟ نوفر لك إجابات سريعة على أكثر الاستفسارات شيوعًا.",
+    "items": [
+      { "q": "ما الذي أحتاجه للبدء؟", "a": "نص إجابة تجريبي هنا. سنرشدك خطوة بخطوة ونتولى الجزء الأكبر." },
+      { "q": "ما مدى التخصيص المتاح؟", "a": "نص إجابة تجريبي هنا. نخصص الحلول وفقًا لتدفقات عملك وأدواتك." },
+      { "q": "ماذا لو لم تحقق النتائج؟", "a": "نص إجابة تجريبي هنا. نعمل على التحسين وقياس مؤشرات النجاح معًا." },
+      { "q": "هل أحتاج لمعرفة البرمجة؟", "a": "نص إجابة تجريبي هنا. لا حاجة للبرمجة لمعظم الاستخدامات." }
+    ]
   },
   "home": {
     "title": "الرئيسية",
