Full website structure complete

--- a/khaial-website/public/locales/ar/common.json
+++ b/khaial-website/public/locales/ar/common.json
@@ -140,14 +140,44 @@
     "cta_contact": "تواصل معنا",
     "cta_back_home": "العودة للصفحة الرئيسية"
   },
+  "whatsappIntro": {
+    "badge_year": "2025",
+    "badge_label": "استكشف رحلتنا",
+    "title_l1": "ادمج واتساب",
+    "title_l2": "بالذكاء الاصطناعي!",
+    "subtitle": "سيتولى خَيَال دمج الوكلاء الذكيين عبر واتساب حتى لا تحتاج إلى 10 أدوات مختلفة.",
+    "video_aria": "فيديو تعريفي عن وكلاء واتساب بالذكاء الاصطناعي"
+  },
+  "whatsappRevenue": {
+    "pill": "عن خَيَال",
+    "title_l1": "آلة إيرادات واتساب",
+    "title_l2": "",
+    "bullets": [
+      "وكيل مبيعات عبر واتساب يؤهل العملاء على مدار الساعة",
+      "روبوت دعم عملاء بردود فورية بالعربية والإنجليزية",
+      "إجابات تلقائية للأسئلة الشائعة بمحفزات ذكية",
+      "تكامل كامل مع CRM/Sheets/الموقع"
+    ],
+    "cta": "احجز موعدًا",
+    "rating": "+900 قاموا بالتقييم"
+  },
   "contact": {
     "title": "تواصل معنا",
     "fields": {
-      "name": "الاسم",
+      "firstName": "الاسم الأول",
+      "lastName": "اسم العائلة",
       "email": "البريد الإلكتروني",
-      "company": "الشركة",
-      "whatsapp": "رقم واتساب",
+      "country": "من أين أنت؟",
+      "companyType": "نوع شركتك؟",
       "message": "الرسالة"
+    },
+    "placeholders": {
+      "firstName": "محمد",
+      "lastName": "أحمد",
+      "email": "jane@company.com",
+      "country": "اختر بلدك...",
+      "companyType": "اختر الفئة",
+      "message": "اكتب رسالتك..."
     },
     "submit": "إرسال",
     "submitted": "تم الإرسال"
