Fixed layout + made more responsive to smaller screens

--- a/khaial-website/public/locales/ar/common.json
+++ b/khaial-website/public/locales/ar/common.json
@@ -25,6 +25,12 @@
     "subtitle": "نستثمر قوة الذكاء الاصطناعي لإحداث ثورة في الصناعات وتحسين التجارب البشرية.",
     "button": "احجز موعدًا"
   },
+  "footerCta": {
+    "pill": "انضم إلينا",
+    "title_primary": "هل أنت مستعد لنمو",
+    "title_secondary": "شركتك بالابتكار من الجيل القادم؟",
+    "subtitle": "جاهز للخطوة التالية؟ انضم الآن وابدأ بتحويل رؤيتك إلى واقع بدعم الخبراء."
+  },
   "social": {
     "twitter": "تويتر (إكس)",
     "instagram": "إنستغرام",
@@ -111,8 +117,8 @@
     "aria": "من نحن",
     "pill": "من نحن",
     "pill_label": "",
-    "start_index": 22,
-    "text": "العمليات اليدوية تقتل إمكانيات النمو لديك\n وتستنزف فريقك. نصمم أنظمة ذكاء اصطناعي مخصصة\n لتحويل عملك إلى آلة توليد أرباح\n تعمل من تلقاء نفسها."
+    "start_index": 50,
+    "text": "العمليات اليدوية تقتل إمكانيات النمو لديك وتستنزف فريقك.\n\nنصمم أنظمة ذكاء اصطناعي مخصصة لتحويل عملك إلى آلة توليد أرباح تعمل من تلقاء نفسها."
   },
   "faqSection": {
     "aria": "الأسئلة الشائعة",
