updated ATF for whatsapp agents page

--- a/khaial-website/public/locales/ar/common.json
+++ b/khaial-website/public/locales/ar/common.json
@@ -149,10 +149,13 @@
   "whatsappIntro": {
     "badge_year": "2025",
     "badge_label": "استكشف رحلتنا",
-    "title_l1": "ادمج واتساب",
-    "title_l2": "بالذكاء الاصطناعي!",
-    "subtitle": "سيتولى خَيَال دمج الوكلاء الذكيين عبر واتساب حتى لا تحتاج إلى 10 أدوات مختلفة.",
-    "video_aria": "فيديو تعريفي عن وكلاء واتساب بالذكاء الاصطناعي"
+    "title_l1": "حوّل واتساب إلى أذكى وكيل",
+    "title_l2": "مبيعات ودعم — 24/7",
+    "subtitle": "وكلاؤنا بالذكاء الاصطناعي يديرون المبيعات والدعم وإعادة التفاعل — لتغلق صفقات أكثر، وترفع رضا العملاء، وتوفّر ساعات يوميًا.",
+    "video_aria": "فيديو تعريفي عن وكلاء واتساب بالذكاء الاصطناعي",
+    "cta_label": "احجز تجربة مجانية",
+    "social_proof_aria": "موثوق به من شركات رائدة",
+    "testimonial_quote": "أغلقنا صفقات أكثر بثلاث مرات بعد الانتقال إلى وكيل واتساب بالذكاء الاصطناعي"
   },
   "whatsappRevenue": {
     "pill": "عن خَيَال",
