updated BTF on whatsapp page

--- a/khaial-website/public/locales/ar/common.json
+++ b/khaial-website/public/locales/ar/common.json
@@ -155,7 +155,11 @@
     "video_aria": "فيديو تعريفي عن وكلاء واتساب بالذكاء الاصطناعي",
     "cta_label": "احجز تجربة مجانية",
     "social_proof_aria": "موثوق به من شركات رائدة",
-    "testimonial_quote": "أغلقنا صفقات أكثر بثلاث مرات بعد الانتقال إلى وكيل واتساب بالذكاء الاصطناعي"
+    "testimonial_quote": "أغلقنا صفقات أكثر بثلاث مرات بعد الانتقال إلى وكيل واتساب بالذكاء الاصطناعي",
+    "trust_aria": "عناصر الثقة",
+    "trust_no_cc": "لا حاجة لبطاقة ائتمان",
+    "trust_cancel_anytime": "إلغاء في أي وقت",
+    "trust_free_trial": "تجربة مجانية متاحة"
   },
   "whatsappRevenue": {
     "pill": "عن خَيَال",
@@ -203,6 +207,45 @@
     "privacy_desc": "نحترم خصوصيتك ونلتزم بحماية بياناتك الشخصية. سيتم تحديث هذا المستند لاحقًا.",
     "terms_title": "الشروط والأحكام",
     "terms_desc": "سيتم توفير الشروط والأحكام التفصيلية لاحقًا."
+  },
+  "whatsappBenefits": {
+    "aria": "الفوائد الأساسية",
+    "pill": "الفوائد",
+    "heading": "ما الذي ينتظرك؟",
+    "subtitle": "فوائد مباشرة تركّز على نتائج العميل، لا على الميزات.",
+    "items": [
+      {
+        "title": "أغلق المزيد من الصفقات",
+        "desc": "وكلاء المبيعات بالذكاء الاصطناعي يتفاعلون فورًا، يؤهلون العملاء، ويقودون الإيرادات."
+      },
+      {
+        "title": "أسعد عملاءك على مدار الساعة",
+        "desc": "قدّم إجابات فورية ودعمًا لحظيًا دون توظيف فريق جديد."
+      },
+      {
+        "title": "لا تفقد عميلًا محتملاً بعد الآن",
+        "desc": "متابعات تلقائية وإعادة تفعيل للمحادثات حتى تتم عملية التحويل."
+      },
+      {
+        "title": "تكامل سلس",
+        "desc": "اربط واتساب مع نظام CRM أو موقعك أو Sheets — بدون تعقيد تقني."
+      }
+    ]
+  },
+  "whatsappServices": {
+    "aria": "الخدمات",
+    "pill": "الخدمات",
+    "heading": "كيف يمكننا مساعدتك؟",
+    "subtitle": "سبع خدمات أساسية مع شرح موجز وزر للمشاهدة العملية.",
+    "cta": "شاهدها عمليًا",
+    "items": [
+      { "title": "وكيل مبيعات واتساب", "desc": "يتفاعل مع العملاء المحتملين ويؤهلهم ويحرك المبيعات تلقائيًا." },
+      { "title": "روبوت دعم العملاء", "desc": "إجابات فورية ودعم لحظي على مدار الساعة دون توظيف." },
+      { "title": "متابعة وإعادة تفاعل", "desc": "متابعات ذكية تُبقي المحادثات حية حتى تتم عملية التحويل." },
+      { "title": "حجز المواعيد وتتبع الطلبات", "desc": "حجوزات فورية وتتبع طلبات داخل واتساب بسلاسة." },
+      { "title": "ردود تلقائية ذكية (الأسئلة والمحّفزات)", "desc": "أسئلة شائعة تلقائية ومحفزات واعية بالسياق لحلول سريعة." },
+      { "title": "حملات وبث ذكي", "desc": "رسائل مستهدفة تُرسل في الوقت المثالي لرفع التفاعل." }
+    ]
   }
 }
 
