updated footer with calender

--- a/khaial-website/public/locales/ar/common.json
+++ b/khaial-website/public/locales/ar/common.json
@@ -25,6 +25,12 @@
     "subtitle": "نستثمر قوة الذكاء الاصطناعي لإحداث ثورة في الصناعات وتحسين التجارب البشرية.",
     "button": "احجز موعدًا"
   },
+  "discovery": {
+    "title_l1": "تعرّف إن كان خَيَال",
+    "title_l2": "هو الخيار المناسب لك",
+    "title_italic": "(أكيد مناسب)",
+    "subtitle": "احجز جولة تعريفية سريعة لمدة 20 دقيقة عبر خَيَال."
+  },
   "footerCta": {
     "pill": "انضم إلينا",
     "title_primary": "هل أنت مستعد لنمو",
