--- a/khaial-website/public/locales/en/common.json
+++ b/khaial-website/public/locales/en/common.json
@@ -25,6 +25,12 @@
     "subtitle": "Harnessing the power of artificial intelligence to revolutionize industries and enhance human experiences.",
     "button": "Book an Appointment"
   },
+  "discovery": {
+    "title_l1": "See if Khaial is",
+    "title_l2": "the right fit for you",
+    "title_italic": "(it totally is)",
+    "subtitle": "Schedule a quick, 20 minute guided tour through Khaial."
+  },
   "footerCta": {
     "pill": "Become a Part of Us",
     "title_primary": "Ready to Grow Your",
