updated entire codebase to make it more clean

--- a/khaial-website/public/locales/ar/common.json
+++ b/khaial-website/public/locales/ar/common.json
@@ -2,29 +2,35 @@
   "navigation": {
     "home": "الرئيسية",
     "about": "من نحن",
-    "whatsapp": "وكلاء واتساب",
+    "whatsapp": "بوت الواتساب",
     "contact": "تواصل معنا",
     "faq": "الأسئلة الشائعة",
-    "privacy": "سياسة الخصوصية",
+    "privacy": "الخصوصية",
     "terms": "الشروط"
   },
   "hero": {
     "year_badge": "2025",
-    "studio_label": "استوديو ذكاء اصطناعي من الجيل التالي",
+    "studio_label": "استوديو ذكاء اصطناعي متقدم",
     "title_line1": "أنظمة ذكاء اصطناعي",
-    "title_line2": "تفعل كل شيء من أجلك.",
+    "title_line2": "تنجز كل ما تحتاجه بالنيابة عنك ",
     "title_line3": "",
-    "subtitle": "ندير المبيعات والمحتوى والدعم والعمليات لتكبر أسرع بـ 10 مرات من منافسيك",
+    "subtitle": "ندير المبيعات والمحتوى والدعم والعمليات لتنمو أسرع بـ 10 مرات من منافسيك",
     "cta_primary": "تواصل معنا",
-    "cta_secondary": "ما هو خَيَال؟"
+    "cta_secondary": "ما هو خيال"
   },
   "cta": {
-    "pill": "الميزات",
+    "pill": "المزايا",
     "title_primary": "طريقتنا بسيطة",
     "title_secondary": "وواضحة في كل خطوة.",
     "subtitle": "نستثمر قوة الذكاء الاصطناعي لإحداث ثورة في الصناعات وتحسين التجارب البشرية.",
     "button": "احجز موعدًا"
   },
+  "social": {
+    "twitter": "تويتر (إكس)",
+    "instagram": "إنستغرام",
+    "youtube": "يوتيوب"
+  },
+
   "discovery": {
     "title_l1": "تعرّف إن كان خَيَال",
     "title_l2": "هو الخيار المناسب لك",
@@ -36,11 +42,6 @@
     "title_primary": "هل أنت مستعد لنمو",
     "title_secondary": "شركتك بالابتكار من الجيل القادم؟",
     "subtitle": "جاهز للخطوة التالية؟ انضم الآن وابدأ بتحويل رؤيتك إلى واقع بدعم الخبراء."
-  },
-  "social": {
-    "twitter": "تويتر (إكس)",
-    "instagram": "إنستغرام",
-    "youtube": "يوتيوب"
   },
   "footer": {
     "navigate": "تصفح",
@@ -71,6 +72,8 @@
     "pill": "مقارنة",
     "title_primary": "قبل خَيَال مقابل بعده",
     "title_secondary": "اشعر بالفرق",
+    "label_before": "قبل خَيَال",
+    "label_after": "بعد خَيَال",
     "before": [
       "أكثر من 6 ساعات مهدرة يوميًا",
       "فقدان المبيعات يوميًا",
@@ -91,7 +94,7 @@
     "title_line1": "خدمات مدعومة بالذكاء الاصطناعي",
     "title_line2": "للأعمال الطموحة",
     "subtitle": "حلول ذكاء اصطناعي متقدمة لتحويل الأعمال، وزيادة الكفاءة، ودفع الابتكار.",
-    "cta": "احجز مكالمة لمدة 15 دقيقة",
+    "cta": "احجز مكالمة لمدة 20 دقيقة",
     "cards": [
       {
         "title": "تطوير مدعوم بالذكاء الاصطناعي",
@@ -133,10 +136,22 @@
     "title_line2": "الشائعة",
     "subtitle": "هل لديك أسئلة؟ نوفر لك إجابات سريعة على أكثر الاستفسارات شيوعًا.",
     "items": [
-      { "q": "ما الذي أحتاجه للبدء؟", "a": "نص إجابة تجريبي هنا. سنرشدك خطوة بخطوة ونتولى الجزء الأكبر." },
-      { "q": "ما مدى التخصيص المتاح؟", "a": "نص إجابة تجريبي هنا. نخصص الحلول وفقًا لتدفقات عملك وأدواتك." },
-      { "q": "ماذا لو لم تحقق النتائج؟", "a": "نص إجابة تجريبي هنا. نعمل على التحسين وقياس مؤشرات النجاح معًا." },
-      { "q": "هل أحتاج لمعرفة البرمجة؟", "a": "نص إجابة تجريبي هنا. لا حاجة للبرمجة لمعظم الاستخدامات." }
+      {
+        "q": "ما الذي أحتاجه للبدء؟",
+        "a": "احجز مكالمة تعريفية لمدة 20 دقيقة من التقويم في أسفل الصفحة. جهّز أهدافك والأدوات التي تستخدمها (الموقع، CRM أو Sheets)، ونحن نتكفّل بالخطة والتنفيذ."
+      },
+      {
+        "q": "ما الذي يمكن تخصيصه؟",
+        "a": "نطوّر وكلاء واتساب بالذكاء الاصطناعي ومواقع ذكية وتكاملات حسب تدفقات عملك. ندعم العربية والإنجليزية، ونوفّر ميزات مثل محفزات الأسئلة الشائعة، الحملات والبث، وحجز المواعيد."
+      },
+      {
+        "q": "ماذا لو لم تظهر النتائج بعد؟",
+        "a": "نُحسّن باستمرار. نقيس الإجراءات المهمة (العملاء المحتملون، الحجوزات، الردود) ثم نعدّل القوالب والتدفقات والتكاملات حتى نصل للأهداف."
+      },
+      {
+        "q": "هل أحتاج لمعرفة البرمجة؟",
+        "a": "لا. فريقنا يتولى التنفيذ والصيانة. ستستمر في استخدام واتساب وأدواتك المعتادة دون عمل تقني من جانبك."
+      }
     ]
   },
   "home": {
@@ -155,7 +170,7 @@
   "whatsappIntro": {
     "badge_year": "2025",
     "badge_label": "استكشف رحلتنا",
-    "title_l1": "حوّل واتساب إلى أذكى وكيل",
+    "title_l1": " حوّل واتساب إلى أذكى وكيل",
     "title_l2": "مبيعات ودعم — 24/7",
     "subtitle": "وكلاؤنا بالذكاء الاصطناعي يديرون المبيعات والدعم وإعادة التفاعل — لتغلق صفقات أكثر، وترفع رضا العملاء، وتوفّر ساعات يوميًا.",
     "video_aria": "فيديو تعريفي عن وكلاء واتساب بالذكاء الاصطناعي",
@@ -242,7 +257,7 @@
     "aria": "الخدمات",
     "pill": "الخدمات",
     "heading": "كيف يمكننا مساعدتك؟",
-    "subtitle": "سبع خدمات أساسية مع شرح موجز وزر للمشاهدة العملية.",
+    "subtitle": "تم تصميم خدماتنا بتطبيق الحاجات المطلوبة للشركة والعميل.",
     "cta": "شاهدها عمليًا",
     "items": [
       { "title": "وكيل مبيعات واتساب", "desc": "يتفاعل مع العملاء المحتملين ويؤهلهم ويحرك المبيعات تلقائيًا." },
@@ -251,6 +266,22 @@
       { "title": "حجز المواعيد وتتبع الطلبات", "desc": "حجوزات فورية وتتبع طلبات داخل واتساب بسلاسة." },
       { "title": "ردود تلقائية ذكية (الأسئلة والمحّفزات)", "desc": "أسئلة شائعة تلقائية ومحفزات واعية بالسياق لحلول سريعة." },
       { "title": "حملات وبث ذكي", "desc": "رسائل مستهدفة تُرسل في الوقت المثالي لرفع التفاعل." }
+    ]
+  },
+  "homeServices": {
+    "items": [
+      {
+        "title": "وكلاء واتساب بالذكاء الاصطناعي",
+        "desc": "حلول ذكية لإدارة المبيعات وخدمة العملاء والمتابعة التلقائية عبر واتساب."
+      },
+      {
+        "title": "وكلاء ذكاء اصطناعي موجّهون للأعمال",
+        "desc": "وكلاء ذكاء اصطناعي لدعم الفرق الداخلية وتحسين أداء الأعمال."
+      },
+      {
+        "title": "استوديو الذكاء الإبداعي",
+        "desc": "إنتاج محتوى عالي الجودة بسرعة وبتكلفة أقل، مع لوحة تحكم مخصصة لمتابعة كل منشور."
+      }
     ]
   }
 }
