thank you page, social media icons added

--- a/khaial-website/public/locales/ar/common.json
+++ b/khaial-website/public/locales/ar/common.json
@@ -28,7 +28,9 @@
   "social": {
     "twitter": "تويتر (إكس)",
     "instagram": "إنستغرام",
-    "youtube": "يوتيوب"
+    "youtube": "يوتيوب",
+    "linkedin": "لينكدإن",
+    "tiktok": "تيك توك"
   },
 
   "discovery": {
@@ -283,6 +285,11 @@
         "desc": "إنتاج محتوى عالي الجودة بسرعة وبتكلفة أقل، مع لوحة تحكم مخصصة لمتابعة كل منشور."
       }
     ]
+  },
+  "thankYou": {
+    "title": "شكرًا لك",
+    "heading": "تم تأكيد الحجز",
+    "subtitle": "تم تحديد موعد اجتماعك. أرسلنا التفاصيل إلى بريدك الإلكتروني."
   }
 }
 
