--- a/khaial-website/public/locales/ar/common.json
+++ b/khaial-website/public/locales/ar/common.json
@@ -290,6 +290,11 @@
     "title": "شكرًا لك",
     "heading": "تم تأكيد الحجز",
     "subtitle": "تم تحديد موعد اجتماعك. أرسلنا التفاصيل إلى بريدك الإلكتروني."
+  },
+  "notFound": {
+    "title": "الصفحة غير موجودة",
+    "subtitle": "الصفحة التي تبحث عنها غير موجودة.",
+    "cta_home": "العودة للصفحة الرئيسية"
   }
 }
 
